--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint --fix . --ext ts,tsx",
+    "precommit": "npm run lint",
+    "format:fix": "prettier . --write",
     "preview": "vite preview"
   },
   "dependencies": {
