--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.0",
+    "msw": "^2.0.8",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
