--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "react-dom": "^18",
     "next": "14.0.3",
     "react-redux": "^8.1.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "next-redux-wrapper": "^8.1.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
     "typescript": "5.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
