--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint:fix": "eslint --fix . --ext ts,tsx",
     "precommit": "npm run lint",
     "format:fix": "prettier . --write",
-    "preview": "vite preview",
     "prepare": "husky install",
-    "postinstall": "chmod +x .husky/*"
+    "postinstall": "chmod +x .husky/*",
+    "test": "vitest run --reporter=verbose",
+    "cover": "vitest run --coverage --reporter=verbose ./src"
   },
   "dependencies": {
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3",
     "react-redux": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.7",
     "next-redux-wrapper": "^8.1.0",
@@ -41,6 +42,18 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/coverage-v8": "^0.34.6",
+    "autoprefixer": "^10.0.1",
+    "jsdom": "^22.1.0",
+    "msw": "^2.0.6",
+    "postcss": "^8",
+    "vitest": "^0.34.6",
+    "vite": "^4.4.5"
   }
 }
